Bug 288908 - Dolphin crash while deleting multiple files
Summary: Dolphin crash while deleting multiple files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.99
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 290021 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-13 18:26 UTC by Hrvoje Senjan
Modified: 2012-01-03 13:52 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.08 KB, text/plain)
2011-12-26 10:40 UTC, Balcaen John
Details
New crash information added by DrKonqi (4.46 KB, text/plain)
2011-12-28 13:43 UTC, Alex Fiestas
Details
New crash information added by DrKonqi (11.11 KB, text/plain)
2012-01-03 13:52 UTC, Robby Engelmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2011-12-13 18:26:03 UTC
Application: dolphin (1.99)
KDE Platform Version: 4.7.90 (4.8 Beta2 (4.7.90) "release 7"
Qt Version: 4.8.0
Operating System: Linux 3.1.5-1-desktop x86_64
Distribution: "openSUSE 12.1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

Using 4.8 beta2 and kde-baseapps from yesterday (12. December). This is the first dolphin 2 crash after a long time.

-- Backtrace:
Application: Dolphin (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fe466626760 (LWP 16699))]

Thread 2 (Thread 0x7fe44ed8f700 (LWP 16700)):
#0  0x00007fe464ebefe7 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x00007fe4609c1b53 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fe4609c292d in ?? () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fe4609c2f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fe465280526 in QEventDispatcherGlib::processEvents (this=0x8ac710, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fe465250272 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fe4652504c7 in QEventLoop::exec (this=0x7fe44ed8edf0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fe465151137 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fe46523007f in QInotifyFileSystemWatcherEngine::run (this=0x8b3830) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fe46515415b in QThreadPrivate::start (arg=0x8b3830) at thread/qthread_unix.cpp:298
#10 0x00007fe464ebcf05 in start_thread () from /lib64/libpthread.so.0
#11 0x00007fe463c1e53d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fe466626760 (LWP 16699)):
[KCrash Handler]
#6  0x00007fe45e3a8883 in KFileItem::isDir (this=0xf1f730) at /usr/src/debug/kdelibs-4.7.90/kio/kio/kfileitem.cpp:1049
#7  0x00007fe453ddc87a in DolphinView::statusBarText (this=<optimized out>) at /usr/src/debug/kde-baseapps-4.7.90/dolphin/src/views/dolphinview.cpp:496
#8  0x00007fe454561d6d in DolphinViewContainer::updateStatusBar (this=0x8fde70) at /usr/src/debug/kde-baseapps-4.7.90/dolphin/src/dolphinviewcontainer.cpp:323
#9  0x00007fe465265331 in QMetaObject::activate (sender=0x95d0b0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#10 0x00007fe46526a229 in QObject::event (this=0x95d0b0, e=<optimized out>) at kernel/qobject.cpp:1157
#11 0x00007fe4643bad84 in notify_helper (e=0x7fff380e6dc0, receiver=0x95d0b0, this=0x6ec1f0) at kernel/qapplication.cpp:4550
#12 QApplicationPrivate::notify_helper (this=0x6ec1f0, receiver=0x95d0b0, e=0x7fff380e6dc0) at kernel/qapplication.cpp:4522
#13 0x00007fe4643bfc03 in QApplication::notify (this=0x7fff380e7140, receiver=0x95d0b0, e=0x7fff380e6dc0) at kernel/qapplication.cpp:4411
#14 0x00007fe46600f0f6 in KApplication::notify (this=0x7fff380e7140, receiver=0x95d0b0, event=0x7fff380e6dc0) at /usr/src/debug/kdelibs-4.7.90/kdeui/kernel/kapplication.cpp:311
#15 0x00007fe46525148c in QCoreApplication::notifyInternal (this=0x7fff380e7140, receiver=0x95d0b0, event=0x7fff380e6dc0) at kernel/qcoreapplication.cpp:876
#16 0x00007fe4652822d8 in sendEvent (event=0x7fff380e6dc0, receiver=<optimized out>) at kernel/qcoreapplication.h:231
#17 QTimerInfoList::activateTimers (this=0x6efe90) at kernel/qeventdispatcher_unix.cpp:625
#18 0x00007fe46527fc8d in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:186
#19 timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:180
#20 0x00007fe46527fcb1 in idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:233
#21 0x00007fe4609c258d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#22 0x00007fe4609c2d88 in ?? () from /usr/lib64/libglib-2.0.so.0
#23 0x00007fe4609c2f59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#24 0x00007fe4652804bf in QEventDispatcherGlib::processEvents (this=0x616ec0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#25 0x00007fe46445ddee in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#26 0x00007fe465250272 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#27 0x00007fe4652504c7 in QEventLoop::exec (this=0x7fff380e70d0, flags=...) at kernel/qeventloop.cpp:204
#28 0x00007fe465255025 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#29 0x00007fe454568bdd in kdemain (argc=5, argv=0x6c84f0) at /usr/src/debug/kde-baseapps-4.7.90/dolphin/src/main.cpp:91
#30 0x00000000004088e4 in _start ()

Reported using DrKonqi
Comment 1 Peter Penz 2011-12-13 18:36:45 UTC
Thanks for the report, I could reproduce the issue.

(internal note: The current item [and I think at least a selected item] must be part of the deleted items for the crash)
Comment 2 Frank Reininghaus 2011-12-13 20:55:48 UTC
Hm, I can't reproduce this. Are there any hints how to do it?

It seems that the list returned by "KFileItemList DolphinView::selectedItems()" contains a null KFileItem because the selection manager thinks that an item is selected which is not in the model any more. But I can't see how this is possible: When items are removed from the model, the selection manager is informed about it and should remove any removed items from its set of selected items.
Comment 3 Peter Penz 2011-12-13 21:56:41 UTC
Grrrmbl... I accidentally had a crash with exactly this backtrace yesterday but forgot to add a detailed description how to reproduce it: Now I'm unable to reproduce it again :-( When writing comment #1 I was quite sure it was related to the selection and the current item...
Comment 4 Hrvoje Senjan 2011-12-14 00:27:01 UTC
For me it hapend one or two more times. One thing in common that selections where made with mouse and the folders had large number of items
Comment 5 Balcaen John 2011-12-26 10:40:57 UTC
Created attachment 67121 [details]
New crash information added by DrKonqi

dolphin (1.99) on KDE Platform 4.7.95 (4.8 RC1 (4.7.95) using Qt 4.7.4

- What I was doing when the application crashed:

I deleted several folders @ once with a lot of files inside, the selection was done using the mouse, & the deletion was done using CTRL+Suppr

-- Backtrace (Reduced):
#6  0x00007f130f8462f3 in KFileItem::isDir (this=0x213f9b0) at /usr/src/debug/kdelibs-4.7.95/kio/kio/kfileitem.cpp:1049
#7  0x00007f130429f9fa in DolphinView::statusBarText (this=<optimized out>) at /usr/src/debug/kde-baseapps-4.7.95/dolphin/src/views/dolphinview.cpp:500
#8  0x00007f13049fadbd in DolphinViewContainer::updateStatusBar (this=0x186c910) at /usr/src/debug/kde-baseapps-4.7.95/dolphin/src/dolphinviewcontainer.cpp:323
#9  0x00007f13049fccd2 in DolphinViewContainer::qt_metacall (this=0x186c910, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff332e4250) at /usr/src/debug/kde-baseapps-4.7.95/build/dolphin/src/dolphinviewcontainer.moc:134
[...]
#11 0x00007f1316f3c839 in QObject::event (this=0x18ef760, e=<optimized out>) at kernel/qobject.cpp:1181
Comment 6 Michi 2011-12-28 09:55:26 UTC
I had the same crash, and it wasn't in a folder with loads of files. However, I also deleted multiple files at once, selected by mouse.
Comment 7 Alex Fiestas 2011-12-28 13:43:30 UTC
Created attachment 67187 [details]
New crash information added by DrKonqi

dolphin (2.0.95) on KDE Platform 4.7.4 (4.7.4) using Qt 4.8.0

- What I was doing when the application crashed:

Same issue that the reported bug, I selected a bunch of files and delete them, one by one steps are:

1-Selected a bunch of files, the selection was done using Ctrl+Click and the + symbol. The selection was NOT continous, meaning that I didn't selected entire rows
2-Pressed shift+del to delete the selected files
3-Accepted the warning
4-I saw animation
5-Crashed

-- Backtrace (Reduced):
#6  0x00007ff39b83b113 in KFileItem::isDir (this=0x1abcfd0) at /home/afiestas/cod3s/cpp/kde/source/kdelibs/kio/kio/kfileitem.cpp:1049
#7  0x00007ff39c3a07ca in DolphinView::statusBarText (this=<optimized out>) at /home/afiestas/cod3s/cpp/kde/source/kde-baseapps/dolphin/src/views/dolphinview.cpp:500
#8  0x00007ff39c85ca0d in DolphinViewContainer::updateStatusBar (this=0x159bbc0) at /home/afiestas/cod3s/cpp/kde/source/kde-baseapps/dolphin/src/dolphinviewcontainer.cpp:324
[...]
#10 0x00007ff398e71e49 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#11 0x00007ff399ac0854 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
Comment 8 Peter Penz 2011-12-28 14:08:30 UTC
Thanks for all your hints, I found a way now to reproduce the issue (although only in 1 out of 3 cases):
- Select all files of a directory (it seems the more items the directory has, the easier it is to reproduce)
- Deselect around 5 arbitrary files of the selection
- Move them to the trash

Will try to fix this during the next days...

I got the following backtrace (seems to be identical with the traces above but contains slightly more info):

Application: Dolphin (dolphin), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f6c83a22760 (LWP 10876))]

Thread 3 (Thread 0x7f6c7105a700 (LWP 10878)):
#0  0x00007f6c7d99b4f3 in poll () from /lib64/libc.so.6
#1  0x00007f6c7a4e7114 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007f6c7a4e7650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f6c7f475636 in QEventDispatcherGlib::processEvents (this=0x7dd9b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f6c7f449c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6c7f449e35 in QEventLoop::exec (this=0x7f6c71059de0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f6c7f35ebe4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:498
#7  0x00007f6c7f42b358 in QInotifyFileSystemWatcherEngine::run (this=0x7dfec0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f6c7f3614d5 in QThreadPrivate::start (arg=0x7dfec0) at thread/qthread_unix.cpp:331
#9  0x00007f6c7f0d0a3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007f6c7d9a466d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f6c6b7fe700 (LWP 11003)):
#0  0x00007f6c7d99b4f3 in poll () from /lib64/libc.so.6
#1  0x00007f6c7a4e7114 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007f6c7a4e7650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007f6c7f475636 in QEventDispatcherGlib::processEvents (this=0xa0dfd0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f6c7f449c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6c7f449e35 in QEventLoop::exec (this=0x7f6c6b7fdde0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f6c7f35ebe4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:498
#7  0x00007f6c7f42b358 in QInotifyFileSystemWatcherEngine::run (this=0xd253a0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f6c7f3614d5 in QThreadPrivate::start (arg=0xd253a0) at thread/qthread_unix.cpp:331
#9  0x00007f6c7f0d0a3f in start_thread () from /lib64/libpthread.so.0
#10 0x00007f6c7d9a466d in clone () from /lib64/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f6c83a22760 (LWP 10876)):
[KCrash Handler]
#6  0x00007f6c81f7a956 in KFileItem::isDir (this=0x1780e40) at /home/kde4peter/kde/src/kdelibs/kio/kio/kfileitem.cpp:1049
#7  0x00007f6c826e6387 in DolphinView::statusBarText (this=0x927450) at /home/kde4peter/kde/src/kde-baseapps/dolphin/src/views/dolphinview.cpp:500
#8  0x00007f6c835f0cbd in DolphinViewContainer::updateStatusBar (this=0x8363f0) at /home/kde4peter/kde/src/kde-baseapps/dolphin/src/dolphinviewcontainer.cpp:324
#9  0x00007f6c835f0fe7 in DolphinViewContainer::slotFinishedPathLoading (this=0x8363f0) at /home/kde4peter/kde/src/kde-baseapps/dolphin/src/dolphinviewcontainer.cpp:370
#10 0x00007f6c835f214e in DolphinViewContainer::qt_metacall (this=0x8363f0, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fff2d4092a0) at /home/kde4peter/kde/build/kde-baseapps/dolphin/src/dolphinviewcontainer.moc:137
#11 0x00007f6c7f45ee8f in QMetaObject::activate (sender=0x927450, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff2d4092a0) at kernel/qobject.cpp:3287
#12 0x00007f6c826eb02b in DolphinView::finishedPathLoading (this=0x927450, _t1=...) at /home/kde4peter/kde/build/kde-baseapps/dolphin/src/dolphinview.moc:435
#13 0x00007f6c826e8a22 in DolphinView::slotLoadingCompleted (this=0x927450) at /home/kde4peter/kde/src/kde-baseapps/dolphin/src/views/dolphinview.cpp:1097
#14 0x00007f6c826ea79e in DolphinView::qt_metacall (this=0x927450, _c=QMetaObject::InvokeMetaMethod, _id=60, _a=0x7fff2d4093c0) at /home/kde4peter/kde/build/kde-baseapps/dolphin/src/dolphinview.moc:263
#15 0x00007f6c7f45ee8f in QMetaObject::activate (sender=0x89f5a0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#16 0x00007f6c826a9467 in KFileItemModel::loadingCompleted (this=0x89f5a0) at /home/kde4peter/kde/build/kde-baseapps/dolphin/src/kfileitemmodel.moc:109
#17 0x00007f6c826a1d9c in KFileItemModel::slotCompleted (this=0x89f5a0) at /home/kde4peter/kde/src/kde-baseapps/dolphin/src/kitemviews/kfileitemmodel.cpp:663
#18 0x00007f6c826a937f in KFileItemModel::qt_metacall (this=0x89f5a0, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff2d409570) at /home/kde4peter/kde/build/kde-baseapps/dolphin/src/kfileitemmodel.moc:91
#19 0x00007f6c7f45ee8f in QMetaObject::activate (sender=0x90c530, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#20 0x00007f6c81f5db1f in KDirLister::completed (this=0x90c530) at /home/kde4peter/kde/build/kdelibs/kio/kdirlister.moc:213
#21 0x00007f6c81f583a2 in KDirListerCache::slotUpdateResult (this=0x7fc0f0, j=0x165f4a0) at /home/kde4peter/kde/src/kdelibs/kio/kio/kdirlister.cpp:1807
#22 0x00007f6c81f5e3a8 in KDirListerCache::qt_metacall (this=0x7fc0f0, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7fff2d409a60) at /home/kde4peter/kde/build/kdelibs/kio/kdirlister_p.moc:108
#23 0x00007f6c7f45ee8f in QMetaObject::activate (sender=0x165f4a0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff2d409a60) at kernel/qobject.cpp:3287
#24 0x00007f6c7f8e5461 in KJob::result (this=0x165f4a0, _t1=0x165f4a0) at /home/kde4peter/kde/build/kdelibs/kdecore/kjob.moc:194
#25 0x00007f6c7f8e48cf in KJob::emitResult (this=0x165f4a0) at /home/kde4peter/kde/src/kdelibs/kdecore/jobs/kjob.cpp:318
#26 0x00007f6c81f3012c in KIO::SimpleJob::slotFinished (this=0x165f4a0) at /home/kde4peter/kde/src/kdelibs/kio/kio/job.cpp:494
#27 0x00007f6c81f39289 in KIO::ListJob::slotFinished (this=0x165f4a0) at /home/kde4peter/kde/src/kdelibs/kio/kio/job.cpp:2670
#28 0x00007f6c81f3bff0 in KIO::ListJob::qt_metacall (this=0x165f4a0, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0x7fff2d409d80) at /home/kde4peter/kde/build/kdelibs/kio/jobclasses.moc:821
#29 0x00007f6c7f45ee8f in QMetaObject::activate (sender=0xf14320, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#30 0x00007f6c81ff1403 in KIO::SlaveInterface::finished (this=0xf14320) at /home/kde4peter/kde/build/kdelibs/kio/slaveinterface.moc:171
#31 0x00007f6c81fee999 in KIO::SlaveInterface::dispatch (this=0xf14320, _cmd=104, rawdata=...) at /home/kde4peter/kde/src/kdelibs/kio/kio/slaveinterface.cpp:172
#32 0x00007f6c81fee5ea in KIO::SlaveInterface::dispatch (this=0xf14320) at /home/kde4peter/kde/src/kdelibs/kio/kio/slaveinterface.cpp:88
#33 0x00007f6c81fe3a2f in KIO::Slave::gotInput (this=0xf14320) at /home/kde4peter/kde/src/kdelibs/kio/kio/slave.cpp:344
#34 0x00007f6c81fe4caf in KIO::Slave::qt_metacall (this=0xf14320, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff2d40a2a0) at /home/kde4peter/kde/build/kdelibs/kio/slave.moc:82
#35 0x00007f6c7f45ee8f in QMetaObject::activate (sender=0xea6540, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#36 0x00007f6c81efe0dd in KIO::Connection::readyRead (this=0xea6540) at /home/kde4peter/kde/build/kdelibs/kio/connection.moc:92
#37 0x00007f6c81efabe0 in KIO::ConnectionPrivate::dequeue (this=0xeb04e0) at /home/kde4peter/kde/src/kdelibs/kio/kio/connection.cpp:82
#38 0x00007f6c81efe06b in KIO::Connection::qt_metacall (this=0xea6540, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x11d6c60) at /home/kde4peter/kde/build/kdelibs/kio/connection.moc:79
#39 0x00007f6c7f45e7aa in QObject::event (this=0xea6540, e=<value optimized out>) at kernel/qobject.cpp:1226
#40 0x00007f6c80104264 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#41 0x00007f6c8010c81a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#42 0x00007f6c80e6dde9 in KApplication::notify (this=0x7fff2d40ade0, receiver=0xea6540, event=0x17e6770) at /home/kde4peter/kde/src/kdelibs/kdeui/kernel/kapplication.cpp:311
#43 0x00007f6c7f44a7cc in QCoreApplication::notifyInternal (this=0x7fff2d40ade0, receiver=0xea6540, event=0x17e6770) at kernel/qcoreapplication.cpp:787
#44 0x00007f6c7f44dfc5 in sendEvent (receiver=0x0, event_type=0, data=0x60e1a0) at kernel/qcoreapplication.h:215
#45 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x60e1a0) at kernel/qcoreapplication.cpp:1428
#46 0x00007f6c7f475443 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#47 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#48 0x00007f6c7a4e6bd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#49 0x00007f6c7a4e73b0 in ?? () from /lib64/libglib-2.0.so.0
#50 0x00007f6c7a4e7650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#51 0x00007f6c7f4755df in QEventDispatcherGlib::processEvents (this=0x60d9b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#52 0x00007f6c801aa1ae in ?? () from /usr/lib64/libQtGui.so.4
#53 0x00007f6c7f449c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#54 0x00007f6c7f449e35 in QEventLoop::exec (this=0x7fff2d40ad50, flags=...) at kernel/qeventloop.cpp:201
#55 0x00007f6c7f44e27b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#56 0x00007f6c835f8d66 in kdemain (argc=1, argv=0x7fff2d40b358) at /home/kde4peter/kde/src/kde-baseapps/dolphin/src/main.cpp:91
#57 0x0000000000400966 in main (argc=1, argv=0x7fff2d40b358) at /home/kde4peter/kde/build/kde-baseapps/dolphin/src/dolphin_dummy.cpp:3
Comment 9 Peter Penz 2011-12-28 16:23:26 UTC
*** Bug 290021 has been marked as a duplicate of this bug. ***
Comment 10 Peter Penz 2011-12-29 23:09:15 UTC
Git commit 89b45001d2ad058214b7e5b755e48d2791c3d20d by Peter Penz.
Committed on 30/12/2011 at 00:02.
Pushed by ppenz into branch 'KDE/4.8'.

Fix inconsistency in selection manager

When a selection has been done with non-linear ranges, it was possible that
the anchor item pointed to an invalid index that resulted into an invalid
selection.

As part of this fix the sorting for DolphinView::selectedItems() has been
disabled (if the caller assumes a sorted selection he must manually adjust it).
FIXED-IN: 4.8.0

M  +31   -48   dolphin/src/kitemviews/kitemlistselectionmanager.cpp
M  +7    -0    dolphin/src/kitemviews/kitemlistselectionmanager.h
M  +1    -4    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/89b45001d2ad058214b7e5b755e48d2791c3d20d
Comment 11 Peter Penz 2011-12-29 23:09:58 UTC
Git commit 1a7e1a23a2c762e8b9d9fd7c6344c45058536edd by Peter Penz.
Committed on 30/12/2011 at 00:02.
Pushed by ppenz into branch 'master'.

Fix inconsistency in selection manager

When a selection has been done with non-linear ranges, it was possible that
the anchor item pointed to an invalid index that resulted into an invalid
selection.

As part of this fix the sorting for DolphinView::selectedItems() has been
disabled (if the caller assumes a sorted selection he must manually adjust it).
FIXED-IN: 4.8.0

M  +31   -48   dolphin/src/kitemviews/kitemlistselectionmanager.cpp
M  +7    -0    dolphin/src/kitemviews/kitemlistselectionmanager.h
M  +1    -4    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/1a7e1a23a2c762e8b9d9fd7c6344c45058536edd
Comment 12 Robby Engelmann 2012-01-03 13:52:20 UTC
Created attachment 67382 [details]
New crash information added by DrKonqi

dolphin (1.99) on KDE Platform 4.7.95 (4.8 RC1 (4.7.95) using Qt 4.7.4

- What I was doing when the application crashed:
Deleting multiple Files in Dolphin after filtering for containing a random character string crashed dolphin

-- Backtrace (Reduced):
#7  0xb6e119b6 in KFileItem::isDir (this=0x9198de0) at ../../kio/kio/kfileitem.cpp:1049
#8  0xb7365d90 in DolphinView::statusBarText (this=0x85ee4a0) at ../../../dolphin/src/views/dolphinview.cpp:500
#9  0xb76cba1c in DolphinViewContainer::updateStatusBar (this=0x8578c28) at ../../../dolphin/src/dolphinviewcontainer.cpp:323
#10 0xb76cc783 in DolphinViewContainer::slotFinishedPathLoading (this=0x8578c28) at ../../../dolphin/src/dolphinviewcontainer.cpp:369
#11 0xb76ce1aa in DolphinViewContainer::qt_metacall (this=0x8578c28, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbf9274b8) at ./dolphinviewcontainer.moc:137